# demo1

./: .gitignore  README.md  README_new.md  pyproject.toml  requirements.txt
configs/: anchor_rules.yaml  heading_rules.yaml  subskill_taxonomy.yaml
schema/: README.md  canonical_case.schema.json  recommendation_card.schema.json  skill_pack.schema.json  workflow_output.schema.json
scripts/: build_definition2id.py  build_embeddings.py  build_icd10_embeddings.py  build_skill_pack.py  build_skill_pack_from_csv.py  check_skill_quality.py  evaluate_cases.py  evaluate_skill.py  extract_icd10_xlsx_to_json.py  extract_patient_case.py  extract_recommendations_from_pdf.py  ocr_to_cards.py  preview_pdf_ocr.py  route_skill.py  run_agent.py  run_skill.py  run_skill_engine.py  validate_recommendation_cards_jsonl.py  validate_skill_pack.py
src/: agent_orchestrator.py  clinical_stage_classifier.py  differential_diagnosis_enricher.py  missing_information_ranker.py  next_step_ranker.py  patient_case_extractor.py  pdf_guideline_parser.py  recommendation_extractor.py  response_composer.py  skill_executor.py  skill_quality_check.py  skill_router.py  support_evidence_ranker.py
test/: README.md  run_batch.py
tests/: test_agent_orchestrator.py  test_anchors.py  test_build_skill_pack.py  test_classifier.py  test_cli_or_pipeline.py  test_clinical_info_extractor.py  test_clinical_stage_classifier.py  test_crohn_eval_cases.py  test_crohn_seed_skill_pack.py  test_crohn_skill_executor.py  test_csv_to_skill_pack.py  test_deepseek_client.py  test_heading_patterns.py  test_hpo_extractor.py  (+17 more)
(+105 files in other folders)
