[project]
name = "guideline-skill-pack"
version = "0.1.0"
description = "Core schemas for medical guideline skill packs."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "openai>=1",
    "jsonschema>=4",
]

[project.scripts]
guideline-skill = "guideline_skill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
