[project]
name = "guideline-skill-pack"
version = "0.1.0"
description = "Core schemas for medical guideline skill packs."
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.0",
    "pydantic>=2.0.0",
    "regex>=2023.0.0",
    "openai>=1.0.0",
    "httpx[socks]>=0.27.0",
    "jsonschema>=4.0.0",
    "PyYAML>=6.0.0",
    "transformers>=4.40.0",
    "rapidfuzz>=3",
    "torch>=2.0.0,<2.12.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
